--- a/.github/workflows/01-manual-exec.yml
+++ b/.github/workflows/01-manual-exec.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Testes E2E (end-to-end)
         run: yarn playwright install
 
+      - name: Testes E2E (end-to-end)
+        run: yarn run e2e
+
     
 
   
